# f12

./: .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .indent.pro  .travis.yml  AUTHORS  Dockerfile  Dockerfile.arm  Dockerfile.dev  Makefile.am  Readme.md  configure.ac  createDummyImage.sh
boot/: .gitignore  Makefile.am
boot/default/: .gitignore  bootcode.asm  bootcode.h  dos_4_0_ebpb.inc
boot/simple_bootloader/: .gitignore  sibolo_set_8_3_name.c  simple_bootloader.h
m4/: .gitignore  beautify.m4  coverage.m4
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  de.po  f12.pot
src/: Makefile.am  bpb.c  bpb.h  common.c  common.h  create.c  create.h  del.c  error.c  error.h  f12.c  f12.h  filesystem.c  filesystem.h  format.c  format.h  get.c  info.c  list.c  list.h  main.c  move.c  put.c
src/libfat12/: Makefile.am  directory_entry.c  error.c  io.c  io_p.h  libfat12.c  libfat12.h  metadata.c  name.c  name_p.h  path.c  path_p.h
tests/: Makefile.am  check_f12.c  check_f12_bpb.c  check_f12_common.c  check_f12_create.c  check_f12_format.c  check_f12_list.c  check_libfat12.c  check_libfat12_directory.c  check_libfat12_metadata.c  check_libfat12_name.c  check_libfat12_path.c  functional.bats  tap_helper.bash  tests.h
tests/fixtures/: .gitignore  test.img.bak
tests/libfat12/: check_libfat12.c  check_libfat12_directory.c  check_libfat12_io.c  check_libfat12_metadata.c  check_libfat12_name.c  check_libfat12_path.c  tests.h
